Fix padding on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,13 @@ body {
   font-family: 'Avenir', 'Open Sans', sans-serif;
 }
 
+@media (max-width: 768px) {
+  html,
+  body {
+      padding: 0 16px;
+  }
+}
+
 /* apply a natural box layout model to all elements */
 *, *:before, *:after {
   -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
